--- a/src/components/mobile-view/open-app/OpenMobileApp.css
+++ b/src/components/mobile-view/open-app/OpenMobileApp.css
@@ -5,7 +5,7 @@ div.openApp {
   position: fixed;
   top: 2rem;
   width: 100%;
-  height: 100%;
+  height: 95%;
   z-index: 10;
 }
 
